modules/aws/dra-analitycs/sg.tf
resource "aws_security_group" "analytics-server-demo" {
  vpc_id      = var.vpc_id
  description = "Security Group for Analytics Server"

  ingress {
    from_port   = 8443
    to_port     = 8443
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    name  = "DRA-Analytics-server"
    Stage = "Test"
  }
}
